Heroku login inside action.

--- a/.github/workflows/heroku-provision-redis.yml
+++ b/.github/workflows/heroku-provision-redis.yml
@@ -13,3 +13,7 @@ jobs:
     steps:
       - name: set up heroku cli
         run:  curl https://cli-assets.heroku.com/install-ubuntu.sh | sh
+
+    steps:
+      - name: log into heroku cli
+        run:  heroku login
