--- a/.github/workflows/heroku-provision-redis.yml
+++ b/.github/workflows/heroku-provision-redis.yml
@@ -20,14 +20,14 @@ jobs:
         run:  heroku apps:info -a=${HEROKU_USER_NAME}-${{ secrets.HEROKU_APP_NAME }} | heroku create -a=${HEROKU_USER_NAME}-${HEROKU_APP_NAME}
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-          HEROKU_API_KEY: ${{ secrets.HEROKU_USER_NAME }}
-          HEROKU_API_KEY: ${{ secrets.HEROKU_APP_NAME }}
+          HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
+          HEROKU_USER_NAME: ${{ secrets.HEROKU_USER_NAME }}
 
       - name: intialize redis
         run: heroku addons -a=${HEROKU_USER_NAME}-${HEROKU_APP_NAME} | grep heroku-redis || heroku addons:create heroku-redis:${HEROKU_REDIS_PLAN:-hobby-dev} -a=${HEROKU_USER_NAME}-${HEROKU_APP_NAME}
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-          HEROKU_USER_NAME: ${{ secrets.HEROKU_USER_NAME }}
           HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
+          HEROKU_USER_NAME: ${{ secrets.HEROKU_USER_NAME }}
           HEROKU_REDIS_PLAN: ${{ secrets.HEROKU_REDIS_PLAN }}
 
