--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     ],
     "require": {
     	"php": "^7.0",
+    	"ext-mbstring": "*",
         "seanmorris/ids": "dev-master"
     },
     "require-dev": {
