--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
     	"php": "^7.4",
     	"ext-mbstring": "*",
-        "seanmorris/ids": "dev-master"
+        "seanmorris/ids": "dev-sm-api-tooling"
     },
     "require-dev": {
 		"simpletest/simpletest": "dev-master"
