CORS for public facing site.

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "require": {
     	"php": "^7.4",
     	"ext-mbstring": "*",
+    	"ext-yaml": "*",
         "seanmorris/ids": "dev-sm-api-tooling"
     },
     "require-dev": {
