--- a/infra/compose/base.yml
+++ b/infra/compose/base.yml
@@ -21,6 +21,10 @@ services:
       file: ../../vendor/seanmorris/ids/infra/compose/base.yml
       service: database
 
+  redis:
+    image: redis:5.0
+    restart: always
+
 volumes:
   schema:
     driver: local
