--- a/infra/compose/test.yml
+++ b/infra/compose/test.yml
@@ -23,6 +23,11 @@ services:
       file: base.yml
       service: database
 
+  redis:
+    extends:
+      file: base.yml
+      service: redis
+
 volumes:
   schema:
     driver: local
